# ChangeLog for mail-filter/spampd
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-filter/spampd/ChangeLog,v 1.12 2011/06/15 15:40:26 phajdan.jr Exp $

  15 Jun 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> spampd-2.30.ebuild:
  x86 stable wrt bug #370651

  22 Apr 2007; Andrej Kacian <ticho@gentoo.org> spampd-2.11-r1.ebuild,
  spampd-2.30.ebuild:
  Use newinitd and newconfd. Bug #174266.

  17 Apr 2007; Christian Faulhammer <opfer@gentoo.org> spampd-2.30.ebuild:
  keyworded ~amd64, bug 171122

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

*spampd-2.30 (18 Mar 2006)

  18 Mar 2006; <ticho@gentoo.org> -spampd-2.11.ebuild, +spampd-2.30.ebuild:
  Version bump. Closes bug #108610 by Benny Pedersen <me at junc.org>. Removed
  ebuild for 2.11.

  25 Sep 2004; Andrej Kacian <ticho@gentoo.org> spampd-2.11-r1.ebuild,
  spampd-2.11.ebuild:
  Stable on x86.

  03 Sep 2004; Andrej Kacian <ticho@gentoo.org> +metadata.xml:
  Added metadata.xml to package.

  05 Jun 2004; David Holm <dholm@gentoo.org> spampd-2.11-r1.ebuild:
  Added to ~ppc.

  03 Jun 2004; Seemant Kulleen <seemant@gentoo.org> spampd-2.11-r1.ebuild,
  spampd-2.11.ebuild:
  Change dev-perl/Mail-SpamAssassin to mail-filter/spamassassin in DEPEND strings

*spampd-2.11 (03 Jun 2004)

  03 Jun 2004; Seemant Kulleen <seemant@gentoo.org> +files/conf, +files/init,
  +spampd-2.11-r1.ebuild, +spampd-2.11.ebuild:
  Moved from net-mail/spampd to mail-filter/spampd.

  05 Jan 2004; Robin H. Johnson <robbat2@gentoo.org> spampd-2.11-r1.ebuild,
  spampd-2.11.ebuild:
  fix bug #37284 and copyright headers

*spampd-2.11-r1 (20 Nov 2003)

  20 Nov 2003; <mkennedy@gentoo.org> spampd-2.11-r1.ebuild, files/init:
  fixed typo in init script which caused failure to shutdown

*spampd-2.11 (28 Oct 2003)

  29 Oct 2003; Matthew Kennedy <mkennedy@gentoo.org> :
  Initial import.  Ebuild submitted by Matthew Kennedy <mkennedy@gentoo.org>.