@@ -1,18 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 AUX conf 665 RMD160 43a3eabe0562a38a99c6712ea21f757c18fc64c2 SHA1 1d0d13ae6a2ba8b0063bbb16bf2fee580d740ea0 SHA256 efce536ae345412cf963e561ffe4682b226f9ddb50be2c0d9541dfddc7734fc9
 AUX init 632 RMD160 b8c7eb083c5a0cf0d1b3687e39a30fa61944c972 SHA1 235d4fa7cd377b3792df1d6e2b9eb1bfe8ef0a2f SHA256 6ce8874246c8f4cfd0740147ca1a0168a924cc7598d5e18bcc3fc1a9ff94f70c
-DIST spampd-2.11.tar.gz 28401 RMD160 629f9e07f6d3806e8e1e1719e5e46ce2bd325274 SHA1 ec3c9fe4532250f3c4bf5be07a038991edc13ff9 SHA256 87567e5dffa1b2ac51133234d790ed449879e460301dae73f475ed2cbe7c68a0
 DIST spampd-2.30.tar.gz 25001 RMD160 9e737fd089847301ac72b975a3f4a49c9e98b979 SHA1 f31c74a00f1365aee5858c1c46594dcb34ed5bfd SHA256 6885544f4d1b339ebe3ad58068434397280a6526f682e78f7d0246aef6a09979
-EBUILD spampd-2.11-r1.ebuild 787 RMD160 5cdb3ecd24e1f2ba108bd347f35a17920c7ced6f SHA1 0f833ff232d37c80545411e7a03f9525b09d12e6 SHA256 a969adf2ed36b54aacff6120c42b35e9db1669f66c0c28dd67a3c92b6a4a540a
-EBUILD spampd-2.30.ebuild 816 RMD160 1d8b901613bfed02311385bd855f7feda8694591 SHA1 9045a6e522c8a1f18c6ad5246bd809eaf40abaae SHA256 1a6a350a9b704e22d51cbfdae573705da739df9324e1a1db2c790345b9fb7af8
-MISC ChangeLog 2001 RMD160 38cfcfc33086ee098bab1dccc0f71cf2aeb8f31c SHA1 a3d3c6b424d50dbe136493147b118ac04406a03c SHA256 2829d578192671286c8ac4f0df8cd724f3b5473e20c729aea306d6e49f0cd123
+EBUILD spampd-2.30.ebuild 776 RMD160 7b377aef3ed1ce2a88a1f65d00d20098bfba68c4 SHA1 cb20941a595d1661b6fec8540d75714f0da06f12 SHA256 ecb8604f349e8bb57ac1362d685fdd24f3cc9bf06c9bd931f774d8232178e42d
+MISC ChangeLog 2081 RMD160 11837da41820fc38f3d2e858618c39f9b881e765 SHA1 b2e4b14ff542d966abf5c4749773214ec9f04112 SHA256 7c611da5b912d66906c0a546ea604a50cc22141eced4707e162dd698e110b6c0
 MISC metadata.xml 161 RMD160 273e570423fa3cd9d3f15f7967a43307c8ee9661 SHA1 a1fecd2f7b169d621b88c6ccab9d758209fc8f19 SHA256 4ebf9a8f60040bfb95f13790c1d146a49c69f791f9c421e02a5d96fd6fcb2b32
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk340nAACgkQuUQtlDBCeQKeRACePQUTG4Jk4VwUZXMrSVwOQojZ
-jEMAn1anr+dtKeU7RsP/77Altv4KLXwO
-=zzM8
+iQIcBAEBCAAGBQJN+aMEAAoJEHfx8XVYajsflZAP/1Oln7VK5991HGDU1Nijjahc
+zq4neR2Te9ZmxjSMLbLovPnmvERKaWsBu/uTxhah0tatp+KZXjj7V4Qzau1+c2Bp
+8SiuI+DRU2uQ87PeK86K+ADwYwgMHGk/80TGtfpGFICpetU9zAd6kdkCIzwRe7c4
+kDjm5EDvLNtp157ZkDKG6MuT+ULaOTmPUdzhbwOmHHvuAMXHR9JEP7kloWwqV33X
+fw8F/562u6zQCHMrNJJvt5JGaR9LUO9YcySw53DVGsypaEMq9d1V7chBbmZeTWyH
+7fT06YH4hl1ewlIFcOT8oTPkyBrekfZfLgZrdAlZsDPtnvoZUhLf0s/CiTj49dQs
+57d24ZeYfj0dh0oP2Gv+fP8vYh/W2XvfcPHIiszsUlAtS399QmoJFsxxhm8XJ/zR
+ADY2PW9y/d0IrDDiMTqygFMwlR+N7qcoxkiJdmPcglZdTjdiAg3YEzC901XRWsMm
+8ZQADMG8sdPhDgrZhYZM+iipyqXoIjk05iVOIRgx03Ml5Kinja/5RJ6amtJXaKkk
+eJsWC/GsgABi3mtqkGFtEJndpo0+qA23BWpSBnM7msQlqkxlJuEBgefH3Sxx+jmh
+COevX4HLYn/9SLPmpGDnSFD0lO57seUI1BBtLYC5UxfVQvAD/2xX5aBpvRP9O1Ka
++38cO/7aegwMGBkCQfmW
+=OHHH
 -----END PGP SIGNATURE-----
