@@ -1,8 +1,8 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/mail-filter/spampd/spampd-2.30.ebuild,v 1.4 2011/06/15 15:40:26 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-filter/spampd/spampd-2.30.ebuild,v 1.5 2011/06/16 06:30:14 eras Exp $
 
-DESCRIPTION="spampd is a program used within an e-mail delivery system to scan messages for possible Unsolicited Commercial E-mail content."
+DESCRIPTION="spampd is a program to scan messages for possible Unsolicited Commercial E-mail content."
 HOMEPAGE="http://www.worlddesign.com/index.cfm/rd/mta/spampd.htm"
 SRC_URI="http://www.worlddesign.com/Content/rd/mta/${PN}/${P}.tar.gz"
 LICENSE="GPL-2"
@@ -19,6 +19,6 @@ src_install() {
 	dosbin spampd
 	dodoc changelog.txt spampd-rh-rc-script
 	dohtml spampd.html
-	newinitd ${FILESDIR}/init spampd
-	newconfd ${FILESDIR}/conf spampd
+	newinitd "${FILESDIR}"/init spampd
+	newconfd "${FILESDIR}"/conf spampd
 }
